# fantastical

./: Cargo.toml
src/: lib.rs  main.rs  utils.rs
src/generators/: mod.rs  parties.rs  places.rs  species.rs
src/inquire/: generators.rs  mod.rs  parties.rs  species.rs
src/resources/: mod.rs  names.rs  parties.rs  places.rs
